--- a/project/css/jobkh.css
+++ b/project/css/jobkh.css
@@ -1,3 +1,29 @@
 * {
     box-sizing: border-box;
 }
+
+.wrap {
+    border: 1px solid black;
+    box-sizing: border-box;
+}
+.wrap.header {
+    background: yellowgreen;
+}
+.wrap.content {
+    background: blanchedalmond;
+}
+.wrap.footer {
+    background: aquamarine;
+}
+
+header, nav, #content, footer {
+    /* 중앙 정렬 방식 */
+    width: 80vw;
+    margin: 0 auto;
+
+    border: 1px solid black;
+}
+
+#content {
+    overflow: hidden;
+}
