--- a/project/css/jobkh.css
+++ b/project/css/jobkh.css
@@ -24,40 +24,123 @@ header, nav, #content, footer {
     border: 1px solid black;
 }
 
-#content {
+a, a:link, a:visited {
+    color: #494949;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+#point {
+    background-color: #e2eaf3;
+    display: inline-block;
+    width:80vw;
+    height: 500px;
     overflow: hidden;
 }
 
-
-.tab-menu1 {
-    float: left;
-}
-
-.tab-menu2 {
-    float: left;
-}
-
-.tab-menu {
-    overflow: hidden;
-}
-
-div.carousel-item ul {
-    list-style: none;
+/* nav 왼쪽 */
+#point .point-left {
     width: 70%;
-    height: 350px;
+    float: left;
+}
+
+/* nav 오른쪽 */
+#point .point-right {
+    width: 30%;
+    float: right;
+}
+
+/* 박스 저장 공간 */
+#point .box-lst {
     display: flex;
+    height: 70%;
+    margin: 10px;
     text-align: left;
 }
 
-div.carousel-item ul li {
-    display: list-item;
+/* 박스 크기 */
+#point .box-lst .box {
     position: relative;
-    width: 230px;
-    height: 164px;
+    width: 200px;
+    height: 165px;
+    box-sizing: border-box;
+    border: 1px solid #000;
+    margin: 5px;
+    border-radius: 8px;
+    overflow: hidden;
 }
 
-div.carousel-item ul li span:first-of-type {
-    color: red;
-    background-color: gray;
-    font-size: 14px;
+
+img {
+    border-radius: 8px;
+    height: 100;
+}
+
+.tab-menu {
+    display: flex;
+    width: 980px;
+    height: 50px;
+    justify-content: space-between;
+}
+
+.tab-menu > ul {
+    display: flex;
+}
+
+div.noti-slide {
+    overflow: hidden;
+}
+
+.swiper-container > .lst {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+.swiper-container .lst li a {
+    text-decoration: none;
+}
+
+스와이퍼 슬라이더 스타일
+div.swiper-container {
+    width: 100%;
+    height: 100%;
+}
+
+li.swiper-slide {
+    display: flex;
+    align-items: center;
+}
+
+
+div.tool {
+    width: 400px; /* 원하는 너비 설정 */
+}
+
+ul.menu {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); /* 2개의 열로 구성 */
+    grid-template-rows: repeat(2, auto); /* 2개의 행으로 구성 */
+    gap: 10px; /* 아이템 간의 간격 설정 */
+}
+
+li.menu-item {
+    height: 30px; /* 원하는 높이 설정 */
+    background-color: #fff; /* 랜덤한 색상을 위해 이 부분은 JavaScript로 처리할 수 있습니다. */
+    border-radius: 8px;
+    list-style: none; /* 기본 목록 마커 제거 */
+}
+
+li.menu-item a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    color: #000; /* 링크 텍스트 색상 설정 */
+    text-decoration: none; /* 링크 밑줄 제거 */
+}
+
+div.blind {
+    max-height: 150px; /* 원하는 높이 설정 */
+    overflow-y: scroll; /* 세로 스크롤 표시 */
 }
