--- a/project/css/jobkh.css
+++ b/project/css/jobkh.css
@@ -33,7 +33,7 @@ a, a:link, a:visited {
 #point {
     background-color: #e2eaf3;
     display: inline-block;
-    width:80vw;
+    width: 80vw;
     height: 500px;
     overflow: hidden;
 }
@@ -47,15 +47,77 @@ a, a:link, a:visited {
 /* nav 오른쪽 */
 #point .point-right {
     width: 30%;
-    float: right;
+    float: left;
+    padding: 10px;
 }
+
+.tab-cont {
+    overflow: hidden;
+}
+
+.tab-cont .active {
+    display: flex;
+}
+
+.tab-cont:not(.active) {
+    display: none;
+}
+
+.wrap-menu {
+    display: flex;
+    height: 400px;
+}
+/* Swiper 슬라이더 스타일 */
+.swiper-container {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    overflow: hidden;
+  }
+  
+  .slide-box {
+    text-align: center;
+    font-size: 16px;
+    background: #fff;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+  }
+  
+  /* 버튼 스타일 */
+  .btn-control > .swiper-button-prev,
+  .btn-control > .swiper-button-next {
+    position: absolute;
+    top: 50%;
+    width: 40px;
+    height: 40px;
+    margin-top: -20px;
+    z-index: 10;
+    cursor: pointer;
+    color: #000;
+    font-size: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 0.3s;
+  }
+  
+ .btn-control > .swiper-button-prev {
+    left: 10px;
+  }
+  
+  .btn-control > .swiper-button-next {
+    right: 10px;
+  }
+
 
 /* 박스 저장 공간 */
 #point .box-lst {
     display: flex;
-    height: 70%;
+    height: 100%;
     margin: 10px;
     text-align: left;
+    justify-content: center;
 }
 
 /* 박스 크기 */
@@ -66,50 +128,102 @@ a, a:link, a:visited {
     box-sizing: border-box;
     border: 1px solid #000;
     margin: 5px;
+    padding: 5px;
+    border-radius: 8px;
+    overflow: hidden;
+
+}
+
+.box-double {
+    position: relative;
+    width: 200px;
+    height: 330px;
+    box-sizing: border-box;
+    border: 1px solid #000;
+    margin: 5px;
     border-radius: 8px;
     overflow: hidden;
 }
 
-
-img {
+/* 이미지 규격 */
+.box-lst li > img {
+    border: 1px solid #000;
     border-radius: 8px;
     height: 100;
 }
 
+/* 메뉴 버튼 */
 .tab-menu {
     display: flex;
-    width: 980px;
+    width: 70%;
     height: 50px;
     justify-content: space-between;
 }
 
 .tab-menu > ul {
     display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+}
+
+.tab-menu1 {
+    width: 80%;
+    line-height: 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.tab-menu1 .active {
+    font-weight: bold;
+    text-decoration: underline;
+}
+
+.tab-menu2 {
+    width: 20%;
+    line-height: 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
 div.noti-slide {
     overflow: hidden;
 }
 
-.swiper-container > .lst {
+.verti > .noti {
     padding: 0;
     margin: 0;
     list-style: none;
 }
 
-.swiper-container .lst li a {
+.verti .noti li a {
     text-decoration: none;
 }
 
-스와이퍼 슬라이더 스타일
-div.swiper-container {
-    width: 100%;
-    height: 100%;
+.notice-wrap {
+    display: flex;
+    height: 50px;
+    border: 1px solid #000;
+    border-radius: 8px;
+    padding: 10px;
+    background-color: #fff;
 }
 
-li.swiper-slide {
+.notice-wrap > .tit {
+    width: 10%;
+}
+
+
+/* 스와이퍼 슬라이더 스타일 */
+/* 공지 스와이퍼 기능 */
+.noti-slide .verti {
+    width: 100%;
+    height: 50px;
+}
+
+li.noti {
     display: flex;
-    align-items: center;
 }
 
 
@@ -140,7 +254,16 @@ li.menu-item a {
     text-decoration: none; /* 링크 밑줄 제거 */
 }
 
+
 div.blind {
     max-height: 150px; /* 원하는 높이 설정 */
     overflow-y: scroll; /* 세로 스크롤 표시 */
+}
+
+/* 서비스 박스 - 취업 성공 툴, 추천 서비스 보더로 묶기 */
+.service-box {
+    border: 1px solid #000;
+    border-radius: 8px;
+    padding: 10px;
+    background-color: #fff;
 }
