--- a/project/css/jobkh_nav.css
+++ b/project/css/jobkh_nav.css
@@ -1,42 +1,9 @@
-* {
-    box-sizing: border-box;
-}
-
-.wrap {
-    border: 1px solid black;
-    box-sizing: border-box;
-}
-.wrap.header {
-    background: yellowgreen;
-}
-.wrap.content {
-    background: blanchedalmond;
-}
-.wrap.footer {
-    background: aquamarine;
-}
-
-header, nav, #content, footer {
-    /* 중앙 정렬 방식 */
-    width: 80vw;
-    margin: 0 auto;
-
-    border: 1px solid gray;
-}
-
-a, a:link, a:visited {
-    color: #494949;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-
 /* ===== nav css 시작 =====*/
 /* nav 안 div point 크기 설정 */
 #point {
     background-color: #e2eaf3;
     display: inline-block;
-    width: 80vw;
+    width: 1260px;
     height: 420px;
     overflow: hidden;
 }
