--- a/project/css/jobkh_layout.css
+++ b/project/css/jobkh_layout.css
@@ -7,7 +7,7 @@
     box-sizing: border-box;
 }
 .wrap.header {
-    background: yellowgreen;
+    background: #fff;
 }
 .wrap.nav {
     background: #fff;
@@ -23,7 +23,6 @@ header, nav, #content, footer {
     /* 중앙 정렬 방식 */
     width: 1260px;
     margin: 0 auto;
-    border: 1px solid gray;
 }
 
 a, a:link, a:visited {
@@ -31,3 +30,12 @@ a, a:link, a:visited {
     text-decoration: none;
     cursor: pointer;
 }
+
+button, fieldset, form {
+    border: 0;
+}
+
+button, input, option, select, textarea {
+    vertical-align: middle;
+}
+
