--- a/project/css/jobkh_header.css
+++ b/project/css/jobkh_header.css
@@ -301,9 +301,27 @@ header .headNavBar .allArea .btnAllService .menu-ham {
     text-indent: 0;
 }
 
+header .headNavBar .allArea.active .btnAllService .menu-ham svg .line1 {
+    transform: rotate(45deg);
+    transform-origin: top left;
+}
+
+header .headNavBar .allArea.active .btnAllService .menu-ham svg .line2 {
+    opacity: 0;
+}
+
+header .headNavBar .allArea.active .btnAllService .menu-ham svg .line3 {
+    transform: rotate(-45deg);
+    transform-origin: bottom left;
+}
+
+header .headNavBar .allArea .btnAllService .menu-ham svg path {
+    transition: all .4s;
+}
+
 header .allArea.active .lyNavArea {
     display: block;
-    height: 400px;
+    height: 360px;
 }
 
 header .lyNavArea {
@@ -477,6 +495,24 @@ header .headNavBar .jkNavArea {
 header .headNavBar .jkNavArea .navItem.theme,
 header .headNavBar .jkNavArea .serviceNav .navItem.careerpath {
     position: relative;
+}
+
+/* 화면 어둡게 */
+.jkNavDimm.on {
+    display: block !important;
+}
+
+.jkNavDimm {
+    display: none;
+    position: fixed;
+    top: 500px;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: #000;
+    opacity: .3;
+    filter: alpha(opacity=30);
+    z-index: 1999;
 }
 
 header .headNavBar .userNav {
@@ -673,4 +709,116 @@ header .headNavBar .navInner:after {
     content: "";
     display: block;
     clear: both;
+}
+
+/* 광고 관련 css */
+#banner-area {
+    width: 1260px;
+    margin: 17px auto 15px;
+    font-size: 0;
+    text-align: left;
+}
+
+#banner-area .bnr-big {
+    width: 750px;
+    height: 90px;
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+#banner-area > div {
+    display: inline-block;
+    border-radius: 8px;
+    overflow: hidden;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    height: 90px;
+}
+
+#banner-area .bnr-service {
+    width: 216px;
+    margin: 0 17px;
+    border: 1px solid #e8e8e8;
+}
+
+#banner-area .bnr-service a img {
+    width: 216px;
+}
+
+#banner-area > div img {
+    border-radius: 8px;
+    padding: 0;
+    margin: 0 -32px;
+    border: 0;
+    vertical-align: top;
+}
+
+#banner-area .bnr-service a {
+    display: block;
+}
+
+#banner-area .bnr-service .bnrs-next, 
+#banner-area .bnr-service .bnrs-prev {
+    position: absolute;
+    z-index: 2;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 24px;
+    height: 24px;
+}
+
+#banner-area .bnr-service .bnrs-prev {
+    left: 8px;
+    background-image: url(../images/prev_middle.svg);
+}
+
+#banner-area .bnr-service .bnrs-next {
+    right: 8px;
+    background-image: url(../images/next_middle.svg);
+}
+
+#banner-area .bnr-marketing {
+    width: 260px;
+    height: 90px;
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+.bnr-swiper {
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    overflow: hidden;
+    list-style: none;
+    padding: 0;
+    z-index: 1;
+}
+
+.bnr-swiper .swiper-wrapper {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    display: flex;
+    transition-property: transform;
+    transition-timing-function: var(--swiper-wrapper-transition-timing-function, initial);
+    box-sizing: content-box;
+}
+
+.bnr-swiper .swiper-slide {
+    flex-shrink: 0;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    transition-property: transform;
+}
+
+.bnr-swiper .swiper-notification {
+    position: absolute;
+    left: 0;
+    top: 0;
+    pointer-events: none;
+    opacity: 0;
+    z-index: -1000;
 }
