--- a/project/css/jobkh_nav.css
+++ b/project/css/jobkh_nav.css
@@ -36,14 +36,14 @@
 }
 
 /* Swiper 슬라이더 스타일 */
-.swiper-container {
+.sw-container {
     width: 100%;
     height: 100%;
     position: relative;
     overflow: hidden;
   }
   
-  .slide-box {
+.slide-box {
     text-align: center;
     font-size: 16px;
     background: #e2eaf3;
@@ -369,10 +369,10 @@ span.post-txt {
 }
 
 .tab-menu2 li {
-    width: 80px;
-    margin: 5px -10px;
+    width: 100px;
+    margin: 5px -7px;
     border-radius: 100px;
-    background-color: rgba(128, 128, 128, 0.5);
+    background-color: #b8c8dc;
     color: #000;
     font-weight: bold;
 }
