layout 배경색 변경

--- a/project/css/jobkh_layout.css
+++ b/project/css/jobkh_layout.css
@@ -12,10 +12,10 @@
     background: #fff;
 }
 .wrap.content {
-    background: blanchedalmond;
+    background: #fff;
 }
 .wrap.footer {
-    background: aquamarine;
+    background: #fff;
 }
 
 header, nav, #content, footer {
