--- a/project/css/jobkh_header.css
+++ b/project/css/jobkh_header.css
@@ -1,3 +1,4 @@
+/* 헤더 크기 설정 */
 header .headInner, 
 header .headNavBar .navInner, 
 header .lyNavWrap {
@@ -5,6 +6,7 @@ header .lyNavWrap {
     min-width: 1260px;
 }
 
+/* 헤더 로고 및 검색창 부분 */
 header .headInner {
     padding-top: 32px;
     padding-bottom: 6px;
@@ -16,10 +18,12 @@ header .headInner {
     justify-content: flex-start;
 }
 
+/* 로고 마진 0 */
 .jkLogo {
     margin: 0;
 }
 
+/* 로고 안 a 옵션 설정 */
 .jkLogo a {
     display: block;
     font-size: 0;
@@ -28,6 +32,7 @@ header .headInner {
     margin-right: 19px;
 }
 
+/* a after로 이미지 호출 */
 .jkLogo a:after {
     content: "";
     display: block;
@@ -39,6 +44,7 @@ header .headInner {
     background-size: 143px 25px;
 }
 
+/* 소스상에서만 보이는 텍스트 */
 header legend {
     position: absolute;
     top: -9999px;
@@ -47,6 +53,7 @@ header legend {
     line-height: 0;
 }
 
+/* 헤더 검색창 설정 */
 header .search {
     box-sizing: border-box;
     width: 440px;
@@ -58,6 +65,7 @@ header .search {
     background-color: #fff;
 }
 
+/* 소스상에서만 보이는 텍스트 */
 header .skip {
     position: absolute;
     overflow: hidden;
@@ -67,11 +75,13 @@ header .skip {
     margin: -1px;
 }
 
+/* 헤더 검색창 설정 */
 header .search fieldset .smKey {
     position: relative;
     border-radius: 60px;
 }
 
+/* 검색창 안 텍스트 설정 */
 header .search fieldset .smKey input#stext {
     border: 0;
     width: 100%;
@@ -84,6 +94,7 @@ header .search fieldset .smKey input#stext {
     background: rgba(0,0,0,0);
 }
 
+/* 검색 버튼 설정 및 이미지 호출 */
 header .search fieldset .smKey input.submit {
     width: 44px;
     height: 36px;
@@ -101,6 +112,7 @@ header .search fieldset .smKey input.submit {
     background-color: rgba(0,0,0,0);
 }
 
+/* 상세검색 설정 */
 header .headInner .subSchArea {
     display: flex;
 }
@@ -109,6 +121,7 @@ header .headInner .subSchLink {
     margin-left: 8px;
 }
 
+/* 상세검색 창 버튼 설정 */
 header .headInner .subSchLink .linkItem {
     position: relative;
     display: block;
@@ -122,6 +135,7 @@ header .headInner .subSchLink .linkItem {
     box-sizing: border-box;
 }
 
+/* 상세검색 버튼 이름 설정 */
 header .headInner .subSchLink .linkItem .spNav {
     font-size: 13px;
     font-weight: 500;
@@ -130,6 +144,7 @@ header .headInner .subSchLink .linkItem .spNav {
     color: #6a6a6a;
 }
 
+/* 헤더 우측 상단 배너 영역 설정 */
 header .headInner .headBann {
     margin-left: auto;
     flex-direction: row-reverse;
@@ -145,6 +160,7 @@ header .headInner .headBann .headBannBtns {
     flex-direction: row;
 }
 
+/* 헤더 우측 상단 배너 버튼 설정 */
 header .headInner .headBann .headBannBtns button {
     display: flex;
     justify-content: center;
@@ -193,6 +209,7 @@ header .headInner .headBann .headBannBtns button.btnBannNext {
     border-bottom-right-radius: 60px;
 }
 
+/* 배너 이미지 설정 및 크기 조정 */
 header .headInner .headBann .bannBx {
     width: 106px;
     height: 30px;
@@ -250,6 +267,7 @@ header .headInner .headBann .bannBx .bann-logo:after {
     background-size: cover;
 }
 
+/* 전체 보기 클릭 시 내용 설정 */
 header .headNavBar, 
 header .headNavBar .navInner {
     display: flex;
@@ -267,6 +285,7 @@ header .headNavBar {
     margin: 0 auto;
 }
 
+/* active 시 전체보기 화면이 보이도록 설정 */
 header .headNavBar .active {
     overflow: visible;
 }
@@ -275,6 +294,7 @@ header .headNavBar .allArea {
     width: 38px;
     height: 64px;
 }
+
 
 header .headNavBar .allArea .btnAllService {
     position: relative;
@@ -292,6 +312,7 @@ header .headNavBar .allArea .btnAllService .spGnb {
     display: block;
 }
 
+/* 전체 보기 버튼 설정 */
 header .headNavBar .allArea .btnAllService .menu-ham {
     position: relative;
     height: 24px;
@@ -301,6 +322,7 @@ header .headNavBar .allArea .btnAllService .menu-ham {
     text-indent: 0;
 }
 
+/* 버튼 클릭 시 이미지가 변화되는 설정 */
 header .headNavBar .allArea.active .btnAllService .menu-ham svg .line1 {
     transform: rotate(45deg);
     transform-origin: top left;
@@ -315,10 +337,12 @@ header .headNavBar .allArea.active .btnAllService .menu-ham svg .line3 {
     transform-origin: bottom left;
 }
 
+/* 버튼 이미지가 변화되는 속도 설정 */
 header .headNavBar .allArea .btnAllService .menu-ham svg path {
     transition: all .4s;
 }
 
+/* 전체보기 메뉴 크기 설정 */
 header .allArea.active .lyNavArea {
     display: block;
     height: 360px;
@@ -351,6 +375,7 @@ header .lyNavArea .lyNavWrap .titArea {
     margin: 0 !important;
 }
 
+/* > 이미지 불러오기 */
 header .lyNavArea .lyNavWrap .titArea .tit .spGnb {
     display: inline-block;
     width: 6px;
@@ -467,10 +492,12 @@ header .lyNavArea .all-navWrap .colItem {
     position: relative;
 }
 
+/* 전체보기 메뉴별 크기 설정 */
 header .all-navWrap .col4 {
     width: 17% !important;
 }
 
+/* 퓨쳐랩 메뉴만 별도 크기 조절 */
 header .all-navWrap .col5 {
     width: 32% !important;
 }
@@ -501,11 +528,12 @@ header .headNavBar .jkNavArea .serviceNav .navItem.careerpath {
     position: relative;
 }
 
-/* 화면 어둡게 */
+/* 전체보기 클릭 시 전체보기 메뉴 아래 화면 어둡게 */
 .jkNavDimm.on {
     display: block !important;
 }
 
+/* 전체보기 누르기전 설정 */
 .jkNavDimm {
     display: none;
     position: fixed;
@@ -566,6 +594,7 @@ header .headNavBar .jkNavArea .navItem .linkItem .spNav .txIr {
     letter-spacing: -.5px;
 }
 
+/* 공채정보 버튼 위 2023 작은 이미지 추가 */
 header .headNavBar .jkNavArea .serviceNav .navItem.start > a:before {
     content: "";
     background-image: url(../images/2023_top.svg);
@@ -581,6 +610,7 @@ header .headNavBar .jkNavArea .serviceNav .navItem.start > a:before {
     z-index: 1;
 }
 
+/* 원픽 버튼 위 이직은 작은 이미지 추가 */
 header .headNavBar .jkNavArea .navItem.theme:before {
     content: "";
     background-image: url(../images/turnover.svg);
@@ -596,6 +626,7 @@ header .headNavBar .jkNavArea .navItem.theme:before {
     z-index: 1;
 }
 
+/* 원픽 버튼 왼쪽에 체크 아이콘 이미지 추가 */
 header .headNavBar .jkNavArea .navItem.theme .linkItem .spNav:before {
     content: "";
     display: block;
@@ -610,6 +641,7 @@ header .headNavBar .jkNavArea .navItem.theme .linkItem .spNav:before {
     background-color: rgba(0,0,0,0);
 }
 
+/* 커리어패스 버튼 위에 레벨업은 작은 이미지 추가 */
 header .headNavBar .jkNavArea .serviceNav .navItem.careerpath:before {
     content: "";
     position: absolute;
@@ -625,6 +657,7 @@ header .headNavBar .jkNavArea .serviceNav .navItem.careerpath:before {
     z-index: 1;
 }
 
+/* 로그인, 회원 가입 버튼 설정 */
 header .headNavBar .jkNavArea .userNav .join .join-button, 
 header .headNavBar .jkNavArea .userNav .login .login-button {
     font-size: 15px;
@@ -644,6 +677,7 @@ header .headNavBar .jkNavArea .userNav .userNav-item:last-child {
     margin-right: 0;
 }
 
+/* 기업서비스 버튼 설정 */
 header .headNavBar .jkNavArea .userNav .corp, 
 header .headNavBar .jkNavArea .userNav .corp > a {
     box-sizing: border-box;
@@ -723,6 +757,7 @@ header .headNavBar .navInner:after {
     text-align: left;
 }
 
+/* 왼쪽 큰 배너 설정 */
 #banner-area .bnr-big {
     width: 750px;
     height: 90px;
@@ -745,6 +780,7 @@ header .headNavBar .navInner:after {
     height: 90px;
 }
 
+/* swiper 기능이 추가된 배너 설정 */
 #banner-area .bnr-service {
     width: 216px;
     margin: 0 17px;
@@ -767,6 +803,7 @@ header .headNavBar .navInner:after {
     display: block;
 }
 
+/* swiper 배너 버튼 설정 */
 #banner-area .bnr-service .bnrs-next, 
 #banner-area .bnr-service .bnrs-prev {
     position: absolute;
@@ -787,6 +824,7 @@ header .headNavBar .navInner:after {
     background-image: url(../images/next_middle.svg);
 }
 
+/* 우측 작은 배너 이미지 설정 */
 #banner-area .bnr-marketing {
     width: 260px;
     height: 90px;
@@ -794,6 +832,7 @@ header .headNavBar .navInner:after {
     overflow: hidden;
 }
 
+/* swiper 기능 설정 */
 .bnr-swiper {
     margin-left: auto;
     margin-right: auto;
