--- a/project/css/jobkh_main.css
+++ b/project/css/jobkh_main.css
@@ -2,9 +2,10 @@
 #content {
     overflow: hidden;
   }
-  /*즉시지원 버튼, 스크랩 버튼*/
-  #applyscrap button {
+  /*스크랩 버튼*/
+  .scrap {
     margin-right: 30px;
+  
   }
   /*채용정보 스크랩(별모양 버튼) 사이즈,색*/
   .scrap {
@@ -20,7 +21,8 @@
   /*지원기간 표시 (글씨 크기)*/
   .applydate {
     display: inline;
-    font-size: 8px;
+    font-size: 13px;
+    margin-left: 30px;
   }
   /*즉시지원 버튼*/
   .applynow {
@@ -32,6 +34,8 @@
     font-style: bold;
     border-radius: 8px;
     background-color: rgb(255, 238, 231);
+    margin-left: 30px;
+    margin-right: 0px;
   }
   /*불렛포인트 제거*/
   li {
@@ -49,10 +53,11 @@
   /*채용공고 칸*/
   .grid-container > li {
     background-color: rgba(255, 235, 205, 0);
-    border: 1px solid black;
+    border: 1px solid rgba(94, 88, 88, 0.219);
     text-align: center;
     font-size: 20px;
     border-radius: 12px;
+    border-top: 4px solid blue;
   }
 /*채용공고 사이 이미지배너 4개짜리 한줄에 표시*/
   .imagebanner {
@@ -65,7 +70,6 @@
   /*채용공고 내 즉시지원, 지원기간, 스크랩 버튼 일렬로 표시*/
   #applyscrap {
     display: flex;
-    justify-content: space-between;
   }
   /*채용공고 채용관 이름, 상품안내(더보기) 한줄표시*/
   .bannerwrap {
@@ -136,4 +140,28 @@
   box-sizing: border-box;
   width: 300px;
   height: 247px;
+}
+
+/*채용공고 내 회사 이름*/
+.compName{
+  text-align: left;
+  margin-left: 30px;
+  margin-top: 30px;
+  color: rgba(54, 59, 59, 0.878);
+  font-size: 15px;
+  font-weight: 500;
+}
+/*채용공고 내 채용정보*/
+.recruitInfo{
+  text-align: left;
+  margin-left: 30px;
+  font-size: 19px;
+  margin-right: 30px;
+
+}
+/*즉시지원 버튼 있는 칸 지원기간*/
+.applydateWithApply{
+  margin-left: 4px;
+  display: inline;
+  font-size: 13px;
 }
