--- a/project/css/jobkh_main.css
+++ b/project/css/jobkh_main.css
@@ -3,12 +3,8 @@
     overflow: hidden;
   }
   /*스크랩 버튼*/
-  .scrap {
-    margin-right: 30px;
-  
-  }
   /*채용정보 스크랩(별모양 버튼) 사이즈,색*/
-  .scrap {
+  /* .scrap {
     color: rgba(128, 128, 128, 0);
     border: 1;
     border-color: rgba(255, 235, 205, 0.5);
@@ -17,7 +13,23 @@
     width: 25px;
     height: 25px;
     
-  }
+  } */
+  #applyscrap .scrap {
+    background: url(../images/tpl_bg_icn.png) no-repeat;
+    background-position: -29px -170px;
+    display: block;
+    margin-top: 2.5px;
+    margin-left: auto;
+    margin-right: 35px;
+    width: 19px;
+    height: 19px;
+    text-indent: -9999px;
+    position: relative;
+    border: 0;
+    cursor: pointer;
+    float: right;
+}
+
   /*지원기간 표시 (글씨 크기)*/
   .applydate {
     display: inline;
@@ -155,7 +167,7 @@
 .recruitInfo{
   text-align: left;
   margin-left: 30px;
-  font-size: 19px;
+  font-size: 16px;
   margin-right: 30px;
 
 }
@@ -164,4 +176,8 @@
   margin-left: 4px;
   display: inline;
   font-size: 13px;
+}
+
+.grid-container li:hover {
+		transform: translate(0, -10px);
 }
