--- a/project/css/jobkh_header.css
+++ b/project/css/jobkh_header.css
@@ -1,4 +1,10 @@
 /* 헤더 크기 설정 */
+header {
+    position: relative;
+    z-index: 2000;
+    font-family: 'Pretendard Variable', 'Pretendard', '-apple-system', 'BlinkMacSystemFont', 'system-ui', 'Roboto', 'Helvetica Neue', 'Segoe UI', 'Apple SD Gothic Neo', 'Noto Sans KR', 'Malgun Gothic', 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'sans-serif';
+}
+
 header .headInner, 
 header .headNavBar .navInner, 
 header .lyNavWrap {
@@ -359,6 +365,10 @@ header .lyNavArea {
     z-index: 100;
 }
 
+header .open .lyNavArea {
+    display: block;
+}
+
 header .lyNavArea .lyNavWrap {
     margin: 0 auto;
     border: 1px solid #ebeef3;
@@ -368,11 +378,198 @@ header .lyNavArea .lyNavWrap {
     text-align: left;
 }
 
+header .lyNavWrap .col2 {
+    width: 50%;
+}
+
+header .lyNavWrap .col4 {
+    width: 25%;
+}
+
+header .lyNavArea .lyNavWrap .lyNavInner.side {
+    position: relative;
+    padding-right: 20%;
+}
+
+header .lyNavArea .lyNavWrap .sideCol {
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    width: 20%;
+    height: 100%;
+    background-color: rgb(249, 250, 252);
+    border-left: 1px solid rgb(235, 238, 243);
+}
+
+header .navItem.gi .lyNavWrap .sideInner .row01 {
+    height: 495px;
+}
+
+header .lyNavArea .lyNavWrap .sideCol .row01, 
+header .lyNavArea .lyNavWrap .sideCol .row02 {
+    position: relative;
+}
+
+header .lyNavArea .lyNavWrap .sideCol .row01 {
+    display: block;
+}
+
+header .navItem.gi .lyNavWrap .row01 .colItem {
+    height: 495px;
+    padding: 0px 0px 20px;
+    box-sizing: border-box;
+}
+
+header .navItem.gi .lyNavWrap .row02 .colItem {
+    height: 246px;
+}
+
+#headerWrap .lyNavArea .lyNavWrap .sideCol .sideList {
+    padding: 9px 0 0 13.8%;
+    margin-top: 0;
+    background-color: rgba(0,0,0,0);
+}
+
+header .lyNavArea .lyNavWrap .sideCol .sideList li {
+    margin-top: 10px;
+}
+
+header .lyNavArea .lyNavWrap .sideCol .sideList a {
+    color: #000 !important;
+    font: 700 13px/1.2 "\B9D1\C740 \ACE0\B515",Malgun Gothic,"\B3CB\C6C0",Dotum,sans-serif;
+    padding-left: 26px;
+    position: relative;
+    letter-spacing: -.5px;
+}
+
+header .lyNavArea .lyNavWrap .sideCol .titArea + .sideList li:first-child {
+    margin-top: 8px;
+}
+
+header #gnbGi .lyNavArea .lyNavWrap .sideCol .sideBtmBx {
+    position: absolute;
+    left: 50%;
+    width: 198px;
+    margin-left: -99px;
+}
+
+header .gi .sideCol .sideBtmBx {
+    bottom: 30px;
+}
+
+header .gi .sideCol .sideBtmBx .sideLinkType01 a:last-child {
+    margin-bottom: 0;
+}
+
+header .gi .sideCol .sideBtmBx .sideLinkType01 a {
+    display: block;
+    letter-spacing: -.5px;
+    border: 1px solid #ebeced;
+    padding: 12px 0 14px 15px;
+    background-color: #fff;
+    margin-bottom: 10px;
+}
+
+header .gi .sideCol .sideBtmBx .sideLinkType01 a strong {
+    font-size: 14px;
+    color: #333;
+    display: flex;
+    align-items: center;
+}
+
+header .lyNavArea .lyNavWrap .spGnb {
+    background: url(../images/sp_gnb.png) 0px 0px no-repeat;
+}
+
+header .lyNavArea .lyNavWrap .sideCol .sideList a .icnList {
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+
+header .lyNavArea .lyNavWrap .sideCol .sideList .top100 a .icnList {
+    width: 20px;
+    height: 23px;
+    background-position: -257px -138px;
+    left: 1px;
+    top: 0;
+}
+
+header .lyNavArea .lyNavWrap .sideCol .sideList .my-recommend a .icnList {
+    width: 18px;
+    height: 19px;
+    background-position: -119px -120px;
+    left: 2px;
+    top: 0;
+}
+
+header .lyNavArea .lyNavWrap .sideCol .sideList .recruit-detail-search a .icnList {
+    width: 22px;
+    height: 22px;
+    background-position: -119px -180px;
+    left: 2px;
+    top: 0;
+}
+
+header .lyNavArea .lyNavWrap .sideCol .sideList .best1000 a .icnList {
+    width: 21px;
+    height: 20px;
+    background-position: -30px -120px;
+    left: 1px;
+    top: 1px;
+}
+
+header .lyNavArea .lyNavWrap .sideCol .sideList .ort a .icnList {
+    width: 19px;
+    height: 17px;
+    background-position: -30px -150px;
+    left: 1px;
+    top: 1px;
+}
+
+header .lyNavArea .lyNavWrap .sideCol .sideList .intern a .icnList {
+    width: 19px;
+    height: 18px;
+    background-position: -60px -120px;
+    left: 1px;
+    top: 0;
+}
+
+header .lyNavArea .lyNavWrap .sideCol .sideList .cal a .icnList {
+    width: 19px;
+    height: 17px;
+    background-position: -60px -150px;
+    left: 1px;
+    top: 1px;
+}
+
+
+header .lyNavArea .btnCloseNav {
+    display: block;
+    width: 29px;
+    height: 30px;
+    position: absolute;
+    right: -50px;
+    top: 28px;
+    overflow: hidden;
+    text-indent: -9999px;
+    background-position: -88px -74px !important;
+}
+
 header .lyNavArea .lyNavWrap .titArea {
     display: block;
     padding: 27px 0 4px 26px;
     border-bottom: none;
     margin: 0 !important;
+}
+
+header .lyNavArea .lyNavWrap .titArea .tit {
+    display: inline-block;
+    font-size: 15px;
+    letter-spacing: -0.5px;
+    position: relative;
+    color: rgb(51, 51, 51) !important;
 }
 
 /* > 이미지 불러오기 */
@@ -386,7 +583,8 @@ header .lyNavArea .lyNavWrap .titArea .tit .spGnb {
     background: url(../images/sp_gnb.png) -140px -32px no-repeat;
 }
 
-header .lyNavArea .lyNavWrap .titArea .tit.beta, #headerWrap .lyNavArea .lyNavWrap .titArea .tit.beta .spGnb {
+header .lyNavArea .lyNavWrap .titArea .tit.beta, 
+header .lyNavArea .lyNavWrap .titArea .tit.beta .spGnb {
     display: flex;
     align-items: center;
 }
@@ -399,8 +597,13 @@ header .lyNavArea .all-navWrap .colItem .navWrapBanner {
     width: 173px;
 }
 
-header .lyNavArea .lyNavWrap .listBx {
+/* header .lyNavArea .lyNavWrap .listBx {
     padding-left: 26px;
+} */
+
+header .lyNavArea .lyNavWrap .listBx.listBx-col {
+    display: flex;
+    flex-wrap: wrap;
 }
 
 header .lyNavArea .all-navWrap .listBx {
@@ -461,6 +664,19 @@ header .lyNavArea .lyNavWrap .listBx:after {
     content: "";
     display: block;
     clear: both;
+}
+
+header .lyNavArea .lyNavWrap .listBx .colList.joblistArea li {
+    width: 54px;
+}
+
+header .lyNavArea .lyNavWrap .listBx .colList li.begin {
+    clear: left;
+    padding-left: 0px !important;
+}
+
+header .lyNavArea .lyNavWrap .listBx .colList li {
+    float: left;
 }
 
 header .allArea .all-navWrap {
@@ -529,15 +745,34 @@ header .headNavBar .jkNavArea .serviceNav .navItem.careerpath {
 }
 
 /* 전체보기 클릭 시 전체보기 메뉴 아래 화면 어둡게 */
-.jkNavDimm.on {
+.jkNavDimm-click.on {
     display: block !important;
 }
 
 /* 전체보기 누르기전 설정 */
-.jkNavDimm {
+.jkNavDimm-click {
     display: none;
     position: fixed;
     top: 500px;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: #000;
+    opacity: .3;
+    filter: alpha(opacity=30);
+    z-index: 1999;
+}
+
+/* 채용정보 hover 시 메뉴 아래 화면 어둡게 */
+.jkNavDimm-hover.on {
+    display: block !important;
+}
+
+/* 채용정보 hover 전 설정 */
+.jkNavDimm-hover {
+    display: none;
+    position: fixed;
+    top: 638px;
     left: 0;
     height: 100%;
     width: 100%;
