--- a/project/css/jobkh_footer.css
+++ b/project/css/jobkh_footer.css
@@ -1,30 +1,199 @@
-.footer__notice .list-service {
-    /* //공지사항 오른쪽 */
-    position: absolute;
-    right: 220px;
-    top: 1px;
+.careerpath.home #footer.footer {
+    margin-top: 0px
 }
+
+.salaryPage~#footer.footer {
+    margin-top: 0px
+}
+
+#TemplateWrap~#footer.footer {
+    margin-top: 0px
+}
+
+.hasNav #footer.footer {
+    margin-top: 0px
+}
+
+#adFooter {
+    border-top: none
+}
+
+#footer>* {
+    width: auto
+}
+
+#footer,
+.footer {
+    font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
+    width: 100%;
+    margin: 40px auto 0px;
+    background: #fff;
+    border-top: 1px solid #ddd
+}
+
+#footer .copyright,
+.footer .copyright {
+    margin: 0px;
+    padding: 23px 0px 30px
+}
+
+.footer--long {
+    border-top: 1px solid #ddd
+}
+
+.footer--long .footer__wrap {
+    max-width: 1260px
+}
+
+.footer--medium {
+    border-top: 1px solid #ddd
+}
+
+.footer--medium .footer__wrap {
+    max-width: 1200px
+}
+
+.footer--small-medium {
+    border-top: 1px solid #ddd
+}
+
+.footer--small-medium .footer__wrap {
+    max-width: 1100px
+}
+
+.footer--small-medium .footer__notice-text .ellipsis {
+    max-width: 300px
+}
+
+.footer--short {
+    border-top: 1px solid #ddd
+}
+
+.footer--short .footer__wrap {
+    max-width: 960px
+}
+
+.footer--short .footer__notice-text .ellipsis {
+    max-width: 220px
+}
+
+.footer--short .footer__notice .list-service li:last-child {
+    display: none
+}
+
+.footer--line-none#footer {
+    border-top: none
+}
+
+.footer--line-none.footer {
+    border-top: none
+}
+
+.footer--main#footer {
+    border-top: none
+}
+
+.footer--main.footer {
+    border-top: none
+}
+
+.footer--main .footer__wrap {
+    max-width: 1260px
+}
+
+.footer__wrap {
+    width: 100%;
+    margin: 0 auto
+}
+
+.footer__advertisement {
+    padding: 20px 0px;
+    display: table;
+    width: 100%
+}
+
+.footer__advertisement--text {
+    display: table-cell;
+    font-size: 14px;
+    line-height: 17px;
+    text-align: center;
+    vertical-align: middle
+}
+
+.footer__advertisement--text a {
+    display: block;
+    color: #333
+}
+
+.footer__advertisement--text strong {
+    display: block
+}
+
+.footer__advertisement--image {
+    display: table-cell;
+    width: 495px;
+    padding: 0;
+    text-align: center;
+    vertical-align: middle
+}
+
+.footer__notice {
+    position: relative;
+    overflow: hidden;
+    height: 53px;
+    border: 1px solid #ebebeb;
+    background: #f6f7f9;
+    vertical-align: top
+}
+
+.footer__notice .list-service {
+    position: absolute;
+    right: 66px;
+    top: 1px
+}
+
+.footer__notice .list-service:after {
+    content: "";
+    display: block;
+    clear: both
+}
+
 .footer__notice .list-service li {
-    /* 공지사항 오른쪽//  */
     position: relative;
     float: left;
     line-height: 53px;
-    padding-right: 15px;
+    padding-right: 15px
 }
+
+.footer__notice .list-service li:after {
+    position: absolute;
+    top: 50%;
+    margin-top: -5.5px;
+    right: 7px;
+    content: "";
+    display: block;
+    width: 1px;
+    height: 11px;
+    background: #e0e0e0
+}
+
 .footer__notice .list-service li a {
     font-size: 12px;
     color: #333;
-    letter-spacing: -0.5px;
+    letter-spacing: -0.5px
 }
+
 .footer__notice .list-service li a:hover {
     text-decoration: underline
 }
+
 .footer__notice-wrap {
     width: 630px;
     height: 100%;
     line-height: 53px;
     font-size: 0
 }
+
 .footer__notice-title {
     display: inline-block;
     width: 64px;
@@ -36,13 +205,16 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box
 }
+
 .footer__notice-title a {
     color: #000;
     font-size: 12px
 }
+
 .footer__notice-title a:hover {
     text-decoration: underline
 }
+
 .footer__notice-text {
     display: inline-block;
     white-space: nowrap;
@@ -51,19 +223,27 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box
 }
+
 .footer__notice-text a {
     color: #000;
     font-size: 12px
 }
+
 .footer__notice-text a:hover {
     color: #000
 }
+
 .footer__notice-text .ellipsis {
     display: inline-block;
+    max-width: 350px;
     overflow: hidden;
+    -o-text-overflow: ellipsis;
+    text-overflow: ellipsis;
+    white-space: nowrap;
     vertical-align: top;
     letter-spacing: -0.5px
 }
+
 .footer__notice-text .ellipsis:hover {
     text-decoration: underline
 }
@@ -78,53 +258,72 @@
 .footer__notice_service {
     position: absolute;
     top: 1px;
-    right: 160px;
+    right: 15px;
     height: 53px;
     line-height: 53px;
+    font-size: small;
     background: #f6f7f9
 }
 
 .footer__notice_service a {
-    /* 공지사항 우측 더보기 */
-    text-decoration: none;
     color: #000;
     font-weight: bold
 }
 
+.footer__notice_service a:hover {
+    text-decoration: underline
+}
+
 .footer__notice_service a::after {
-    /* 더보기 > 표시 */
     content: "";
+    position: relative;
+    top: -2px;
     display: inline-block;
     width: 6px;
     height: 10px;
     margin-left: 6px;
     background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%27http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%27%20x%3D%270px%27%20y%3D%270px%27%20viewBox%3D%270%200%20492.004%20492.004%27%3E%0D%0A%20%20%20%20%3Cpath%20%0D%0A%20%20%20%20%20%20%20%20fill%3D%27%23c3c3c3%27%20%0D%0A%20%20%20%20%20%20%20%20d%3D%27M423.386%2C248.299l-256-245.327c-4.208-4.021-10.833-3.958-14.927%2C0.167l-64%2C63.998c-2.042%2C2.042-3.167%2C4.812-3.125%2C7.687%20c0.042%2C2.896%2C1.25%2C5.625%2C3.344%2C7.604l183.792%2C173.579L88.678%2C429.586c-2.094%2C1.979-3.302%2C4.708-3.344%2C7.604%20c-0.042%2C2.875%2C1.083%2C5.646%2C3.125%2C7.687l64%2C63.998c2.083%2C2.083%2C4.813%2C3.125%2C7.542%2C3.125c2.656%2C0%2C5.313-0.979%2C7.385-2.958%20l256-245.327c2.094-2.021%2C3.281-4.792%2C3.281-7.708C426.667%2C253.09%2C425.48%2C250.319%2C423.386%2C248.299z%27%2F%3E%0D%0A%3C%2Fsvg%3E");
+    background-repeat: no-repeat;
     background-position: center;
+    -moz-background-size: 140%;
     background-size: 140%;
+    vertical-align: middle
 }
 
 .footer__service {
-    /* 회사 운영 */
     margin: 20px 0px 25px 0px;
     text-align: center
 }
 
 .footer__service li {
-    /* 회사 운영 */
     display: inline-block;
     margin: 0 15px
 }
 
 .footer__service li a {
-    text-decoration: none;
     color: #000;
     font-size: 14px
-  
 }
+
+.footer__service li a:hover {
+    text-decoration: underline
+}
+
+.footer__service-item {
+    display: inline-block;
+    margin: 0px 8px
+}
+
+.footer__service-item a {
+    color: #000
+}
+
 .footer__help {
+    font-size: small;
     margin-bottom: 7px;
     color: #888;
     text-align: center
+    
 }
 
 .footer__help-link {
@@ -164,7 +363,7 @@
 }
 
 .footer__help-wrap--working-hour::before {
-    display: none;
+    display: none
 }
 
 .footer__help-wrap--footer__consult {
@@ -212,7 +411,7 @@
     position: relative;
     top: 0;
     vertical-align: middle;
-    background-image: url("https://i.jobkorea.kr/content/images/main/footer_spr_award_01.png?v202205161");
+    background-image: url("/content/images/personal/spr_personal.png?2021032200");
     background-repeat: no-repeat;
     background-position: -150px 0px
 }
@@ -297,7 +496,7 @@
 .footer__company-item {
     display: inline-block;
     zoom: 1;
-    display: inline;
+    *display: inline;
     margin-bottom: 3px;
     font-size: 12px;
     color: #888;
@@ -354,8 +553,6 @@
     border-top: 1px solid #ebebeb
 }
 
-
-
 .footer__award-item {
     float: left;
     color: #333
@@ -364,7 +561,7 @@
 .footer__award-item a {
     position: relative;
     display: block;
-    padding: 3px 0px 4px 0px;
+    padding: 18px 0px 4px 0px;
     font-size: 12px;
     line-height: 1.5;
     letter-spacing: -0.5px
@@ -373,19 +570,15 @@
 .footer__award-item a::before {
     content: "";
     position: absolute;
-    background-image: url(/content/images/main/footer_spr_award_01.png?v202205161);
-    background-repeat: no-repeat;
+    background-image: url(/project/images/footer_spr_award_01.png?v202205161);
     vertical-align: top
 }
 
 .footer__award-item a:hover {
     color: #333;
-    text-decoration: underline
+    text-decoration: underline;
 }
 
-.footer__award-item a:link {
-    color: #333
-}
 
 .footer__award-item a:visited {
     color: #333
@@ -456,16 +649,16 @@
 }
 
 .footer__award-item--kbpi {
-    width: 210px
+    width: 216px
 }
 
 .footer__award-item--kbpi a {
-    padding-left: 47px
+    padding-left: 32px
 }
 
 .footer__award-item--kbpi a::before {
     top: 2px;
-    left: 0px;
+    left: -20px;
     width: 40px;
     height: 43px
 }
@@ -502,13 +695,6 @@
     background-position: -240px -50px
 }
 
-/* .footer__award-item--fav a {
-   text-overflow: ellipsis;
-   white-space: nowrap;
-   width: 120px;
-   overflow: hidden;
-} */
-
 .footer__award-item--bcli {
     width: 230px
 }
@@ -537,6 +723,7 @@
     border: 1px solid #d5d5d7;
     line-height: 1;
     color: #000;
+    font-size: small;
     font-weight: bold;
     letter-spacing: -1px
 }
@@ -584,8 +771,10 @@
     overflow: hidden;
     float: left;
     width: 50%;
+    height: 50px;
     padding-top: 13px;
     text-align: center;
+    -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box
 }
@@ -595,8 +784,11 @@
     overflow: hidden;
     float: left;
     width: 50%;
+    height: 50px;
     padding-top: 13px;
     text-align: center;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
     box-sizing: border-box
 }
 
